--- a/source/dialogs/curve-comparison/curve-comparison-modal.html
+++ b/source/dialogs/curve-comparison/curve-comparison-modal.html
@@ -3,55 +3,48 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true">&times;</button>
-                <h4><span class="curve-compare-16x16"></span>&nbsp;Curve Comparison</h4>
+                <h4>
+                    <span class="curve-compare-16x16"></span>&nbsp;Curve Comparison</h4>
             </div>
             <div class="modal-body dialog-style">
-                <form class="form-horizontal form-condensed" name="modalCurveComparison">
+                <form class="form-condensed" name="modalCurveComparison">
                     <h5 class="modal-infomation-title">
                         <span class="well-16x16"></span>
                         Well
                     </h5>
-                    <div class="row form-group">
+                    <div class="form-group">
                         <label class="control-label col-sm-3">
                             Select well:
                         </label>
                         <div class="col-sm-9">
-                            <select ng-model="wiModal.idWell"
-                                    class="form-control wi-form-control"
-                                    ng-options="well.id as well.properties.name for well in wiModal.wells"
-                                    ng-change="wiModal.selectedWell(wiModal.idWell)">
+                            <select ng-model="wiModal.idWell" class="form-control wi-form-control" ng-options="well.id as well.properties.name for well in wiModal.wells"
+                                ng-change="wiModal.selectedWell(wiModal.idWell)">
                             </select>
                         </div>
                     </div>
-                    <div class="row">
-                        <h5><span class="depth-blank-16x16"></span>&nbsp;Depth Interval</h5>
-                    </div>
+                    <!-- <div> -->
+                        <h5>
+                            <span class="depth-blank-16x16"></span>&nbsp;Depth Interval</h5>
+                    <!-- </div> -->
                     <div class="form-group">
                         <label class="control-label col-sm-1">
                             Top
                         </label>
                         <div class="col-sm-4">
-                            <input ng-model="wiModal.topDepth"
-                                    type="number" class="form-control wi-form-control" step="any"
-                                    ng-disabled="wiModal.checked">
+                            <input ng-model="wiModal.topDepth" type="number" class="form-control wi-form-control" step="any" ng-disabled="wiModal.checked">
                         </div>
                         <label for="" class="control-label col-sm-1 padding-left-0">Bottom</label>
                         <div class="col-sm-4">
-                            <input ng-model="wiModal.bottomDepth"
-                                   type="number" class="form-control wi-form-control" step="any"
-                                   ng-disabled="wiModal.checked">
+                            <input ng-model="wiModal.bottomDepth" type="number" class="form-control wi-form-control" step="any" ng-disabled="wiModal.checked">
                         </div>
                         <div class="col-sm-2">
-                            <button class="btn btn-default small-button" ng-disabled="wiModal.checked"
-                                    ng-click="wiModal.defaultDepth()">Default</button>
+                            <button class="btn btn-default small-button" ng-disabled="wiModal.checked" ng-click="wiModal.defaultDepth()">Default</button>
                         </div>
                     </div>
-                    
+
                     <div class="form-group">
                         <label>
-                            <input type="checkbox"
-                                   ng-model="wiModal.checked"
-                                   ng-change="wiModal.checkUseZone(wiModal.checked)">Use zone
+                            <input type="checkbox" ng-model="wiModal.checked" ng-change="wiModal.checkUseZone(wiModal.checked)">Use zone
                         </label>
                     </div>
                     <div ng-style="wiModal.style">
@@ -59,10 +52,8 @@
                             <div class="form-group">
                                 <label for="" class="col-sm-4 control-label">Parameter</label>
                                 <div class="col-sm-8">
-                                    <select class="form-control wi-form-control"
-                                            ng-model="wiModal.zoneSetParaModel"
-                                            ng-options="z as z.properties.name for z in wiModal.zoneSetPara"
-                                            ng-change="wiModal.selectZoneSetPara(wiModal.zoneSetParaModel)">
+                                    <select class="form-control wi-form-control" ng-model="wiModal.zoneSetParaModel" ng-options="z as z.properties.name for z in wiModal.zoneSetPara"
+                                        ng-change="wiModal.selectZoneSetPara(wiModal.zoneSetParaModel)">
                                     </select>
                                 </div>
                             </div>
@@ -87,14 +78,12 @@
                                 </tr>
                             </thead>
                             <tbody style="height: 7em;">
-                            
-                            </style>
-                                <tr ng-repeat="zone in wiModal.zones track by $index"
-                                    ng-class="{selected:$index == selectedRow}"
-                                    ng-click="wiModal.setClickedRow($index)">
+
+                                </style>
+                                <tr ng-repeat="zone in wiModal.zones track by $index" ng-class="{selected:$index == selectedRow}" ng-click="wiModal.setClickedRow($index)">
                                     <td style="width: 20%">
                                         {{zone.properties.name}}
-                                    </td>        
+                                    </td>
                                     <td style="width: 20%">
                                         {{zone.properties.startDepth}}
                                     </td>
@@ -111,57 +100,54 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="row">
+                    <!-- <div class="row"> -->
                         <h5 class="modal-infomation-title">Curve Comparison</h5>
-                    </div>
+                    <!-- </div> -->
                     <div class="form-group">
                         <table class="table table-bordered availableCurve">
                             <thead>
-                            <tr>
-                                <th style="width: 25%">Curve 1</th>
-                                <th style="width: 25%">Curve 2</th>
-                                <th style="width: 25%">Difference</th>
-                                <th style="width: 25%">Correlation</th>
-                            </tr>
+                                <tr>
+                                    <th style="width: 25%">Curve 1</th>
+                                    <th style="width: 25%">Curve 2</th>
+                                    <th style="width: 25%">Difference</th>
+                                    <th style="width: 25%">Correlation</th>
+                                </tr>
                             </thead>
                             <tbody>
-                            <tr ng-repeat="compa in wiModal.curvesComparison">
-                                <td style="width: 25%">
-                                    <ui-select ng-model="compa.curve1"
-                                                class="normal-text">
-                                        <ui-select-match placeholder='Select a curve'>
-                                            {{compa.curve1.properties.name}}
-                                        </ui-select-match>
-                                        <ui-select-choices group-by="wiModal.groupFn" position="down"
-                                                            repeat='curve in wiModal.curves | filter:{properties: {name:$select.search}} track by curve.id'>
-                                            <div class="normal-text">{{curve.properties.name}}</div>
-                                        </ui-select-choices>
-                                    </ui-select>
-                                </td>
-                                <td style="width: 25%">
-                                    <ui-select ng-model="compa.curve2"
-                                                class="normal-text">
-                                        <ui-select-match placeholder='Select a curve'>
-                                            {{compa.curve2.properties.name}}
-                                        </ui-select-match>
-                                        <ui-select-choices group-by="wiModal.groupFn" position="down"
-                                                            repeat='curve in wiModal.curves | filter:{properties: {name:$select.search}} track by curve.id'>
-                                            <div class="normal-text">{{curve.properties.name}}</div>
-                                        </ui-select-choices>
-                                    </ui-select>
-                                </td>
-                                <td style="width: 25%">{{compa.difference}}</td>
-                                <td style="width: 25%">{{compa.correlation}}</td>
-                            </tr>
+                                <tr ng-repeat="compa in wiModal.curvesComparison">
+                                    <td style="width: 25%">
+                                        <ui-select ng-model="compa.curve1" class="normal-text">
+                                            <ui-select-match placeholder='Select a curve'>
+                                                {{compa.curve1.properties.name}}
+                                            </ui-select-match>
+                                            <ui-select-choices group-by="wiModal.groupFn" position="down" repeat='curve in wiModal.curves | filter:{properties: {name:$select.search}} track by curve.id'>
+                                                <div class="normal-text padding-left-20px">{{curve.properties.name}}</div>
+                                            </ui-select-choices>
+                                        </ui-select>
+                                    </td>
+                                    <td style="width: 25%">
+                                        <ui-select ng-model="compa.curve2" class="normal-text">
+                                            <ui-select-match placeholder='Select a curve'>
+                                                {{compa.curve2.properties.name}}
+                                            </ui-select-match>
+                                            <ui-select-choices group-by="wiModal.groupFn" position="down" repeat='curve in wiModal.curves | filter:{properties: {name:$select.search}} track by curve.id'>
+                                                <div class="normal-text">{{curve.properties.name}}</div>
+                                            </ui-select-choices>
+                                        </ui-select>
+                                    </td>
+                                    <td style="width: 25%">{{compa.difference}}</td>
+                                    <td style="width: 25%">{{compa.correlation}}</td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
-                <button class='btn btn-default' ng-click='wiModal.onRunButtonClicked()'
-                        ng-disabled="wiModal.applyingInProgress"><span class="run-16x16"></span>Run</button>
-                <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span class="close-16x16"></span>Close</button>
+                <button class='btn btn-default' ng-click='wiModal.onRunButtonClicked()' ng-disabled="wiModal.applyingInProgress">
+                    <span class="run-16x16"></span>Run</button>
+                <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'>
+                    <span class="close-16x16"></span>Close</button>
             </div>
         </div>
     </div>
