--- a/source/dialogs/curve-derivative/curve-derivative-modal.html
+++ b/source/dialogs/curve-derivative/curve-derivative-modal.html
@@ -5,7 +5,7 @@
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true" ng-disabled="wiModal.applyingInProgress">&times;</button>
                 <h4><span class="curve-edit-16x16"></span>&nbsp;Curve Derivative</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" style="overflow:unset;">
                 <div class="row">
                     <form class='col-sm-12 form-horizontal form-condensed'>
                         <div id="settings">
@@ -14,10 +14,17 @@
                                 <div class='form-group'>
                                     <label class="col-sm-2">Select well</label>
                                     <div class="col-sm-4">
-                                        <select class="form-control wi-form-control" ng-model="wiModal.selectedWell"
+                                        <!-- <select class="form-control wi-form-control" ng-model="wiModal.selectedWell"
                                                ng-options="well as well.properties.name for well in wiModal.wells "
                                                ng-change="wiModal.onWellChange()">
-                                       </select>
+                                       </select> -->
+                                       <ui-select ng-model="wiModal.selectedWell"
+                                       ng-change="wiModal.onWellChange()">
+                                       <ui-select-match>{{$select.selected.name}}</ui-select-match>
+                                       <ui-select-choices repeat='well in wiModal.wells | filter: {name: $select.search} track by $index'>
+                                           {{well.name}}</ui-select-choices>
+                                           <ui-select-no-choice>Well not found</ui-select-no-choice>
+                                    </ui-select>
                                     </div>
                                     <label class="col-sm-2">Input Curve</label>
                                     <div class="col-sm-4">
@@ -50,10 +57,17 @@
                                 <div class='form-group'>
                                     <label class="col-sm-2">Dataset</label>
                                     <div class="col-sm-4">
-                                        <select class="form-control wi-form-control" ng-options="dataset.id as dataset.properties.name for dataset in wiModal.datasets"
+                                        <!-- <select class="form-control wi-form-control" ng-options="dataset.id as dataset.properties.name for dataset in wiModal.datasets"
                                                  ng-model="wiModal.selectedDataset"
                                                  ng-change="wiModal.onDatasetChange()">
-                                        </select>
+                                        </select> -->
+                                        <ui-select ng-model="wiModal.selectedDataset"
+                                        ng-change="wiModal.onDatasetChange()">
+                                            <ui-select-match>{{$select.selected.name}}</ui-select-match>
+                                            <ui-select-choices repeat='dataset.id as dataset in wiModal.datasets | filter: {name: $select.search} track by $index'>
+                                                {{dataset.name}}</ui-select-choices>
+                                            <ui-select-no-choice>Dataset not found</ui-select-no-choice>
+                                        </ui-select>
                                     </div>
                                 </div>
                                 <div class='form-group'>
