--- a/source/dialogs/fill-data-gaps/fill-data-gaps-modal.html
+++ b/source/dialogs/fill-data-gaps/fill-data-gaps-modal.html
@@ -14,8 +14,15 @@
                                 <div class='form-group'>
                                     <label class="col-sm-2">Select well</label>
                                     <div class="col-sm-4">
-                                        <select class="form-control wi-form-control" ng-model="wiModal.selectedWell" ng-options="well as well.properties.name for well in wiModal.wells" ng-change="wiModal.onWellChange()">
-                                       </select>
+                                        <!-- <select class="form-control wi-form-control" ng-model="wiModal.selectedWell" ng-options="well as well.properties.name for well in wiModal.wells" ng-change="wiModal.onWellChange()">
+                                       </select> -->
+                                       <ui-select ng-model="wiModal.selectedWell"
+                                       ng-change="wiModal.onWellChange()">
+                                            <ui-select-match>{{$select.selected.name}}</ui-select-match>
+                                            <ui-select-choices repeat='well in wiModal.wells | filter: {name: $select.search} track by $index'>
+                                                {{well.name}}</ui-select-choices>
+                                            <ui-select-no-choice>Well not found</ui-select-no-choice>
+                                        </ui-select>
                                     </div>
                                     <label class="col-sm-2">Input Curve</label>
                                     <div class="col-sm-4">
@@ -73,9 +80,16 @@
                                 <div class='form-group'>
                                     <label class="col-sm-2">Dataset</label>
                                     <div class="col-sm-4">
-                                        <select class="form-control wi-form-control" ng-options="dataset as dataset.properties.name for dataset in wiModal.datasets"
+                                        <!-- <select class="form-control wi-form-control" ng-options="dataset as dataset.properties.name for dataset in wiModal.datasets"
                                                  ng-model="wiModal.selectedDataset">
-                                        </select>
+                                        </select> -->
+                                        <ui-select ng-model="wiModal.selectedDataset">
+                                            <ui-select-match>{{$select.selected.name}}</ui-select-match>
+                                            <ui-select-choices repeat='dataset in wiModal.datasets | filter: {name: $select.search} track by $index'>
+                                                {{dataset.name}}
+                                            </ui-select-choices>
+                                            <ui-select-no-choice>Dataset not found</ui-select-no-choice>
+                                        </ui-select>
                                     </div>
                                     <label class="col-sm-2">Name</label>
                                     <div class="col-sm-4">
