--- a/source/dialogs/user-define-line/user-define-line-modal.html
+++ b/source/dialogs/user-define-line/user-define-line-modal.html
@@ -13,41 +13,42 @@
                             <table class="font-size-10px table table-bordered udlinesTable">
                                 <thead>
                                     <tr>
-                                        <th></th>
+                                        <th style='width: 5%;'>#</th>
                                         <th>Function</th>
                                         <th style="width: 20%">Line Style</th>
                                         <th style="width: 15%">Display Line</th>
-                                        <th style="width: 15%">Display Equation</th>                                        
+                                        <th style="width: 15%">Display Equation</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr ng-repeat="udLine in wiModal.getUDLines() track by $index"
-                                        ng-class="{selected:$index == selectedRow}"
+                                        ng-class="{'color-red': udLine.invalid}"
                                         ng-click="wiModal.setClickedRow($index)">
-                                        <td>{{$index + 1}}</td>
+                                        <td style='width: 5%;'
+                                        ng-class="{selected:$index == selectedRow}">{{$index + 1}}</td>
                                         <td>
                                             <input ng-model="udLine.function"
                                             type="text" class="form-control wi-form-control"
                                             ng-change="onChange()">
                                         </td>
-                                        <td>
-                                            <div ng-model="udLine.lineStyle" id="lineStyleSvg" 
+                                        <td style='width: 20%;'>
+                                            <div ng-model="udLine.lineStyle" id="lineStyleSvg"
                                                 ng-change="wiModal.onChange(udLine.index)"
                                                 ng-click="wiModal.onEditLineStyleButtonClicked(udLine.index);
                                                     wiModal.onChange(udLine.index)">
                                                 <svg height="20" width="120">
-                                                    <line x1="0" y1="10" x2="120" y2="10" 
+                                                    <line x1="0" y1="10" x2="120" y2="10"
                                                             stroke-dasharray="{{udLine.lineStyle.lineStyle.join(',')}}"
                                                             style="stroke:{{udLine.lineStyle.lineColor}}; stroke-width:{{udLine.lineStyle.lineWidth}}" />
                                                 </svg>
                                             </div>
                                         </td>
-                                        <td>
+                                        <td style='width: 15%;'>
                                             <input ng-model="udLine.displayLine"
                                                 type="checkbox"
                                                 ng-change="wiModal.onChange(udLine.index)">
                                         </td>
-                                        <td>
+                                        <td style='width: 15%;'>
                                             <input ng-model="udLine.displayEquation"
                                                 type="checkbox"
                                                 ng-change="wiModal.onChange(udLine.index)">
