--- a/source/dialogs/share-project/share-project-modal.html
+++ b/source/dialogs/share-project/share-project-modal.html
@@ -137,11 +137,7 @@
 
             </div>
             <div class="modal-footer">
-                <button class='btn btn-default' ng-click='wiModal.onOkButtonClicked()'
-                        ng-disabled="!wiModal.isSelectedGroup"><span class="ok-16x16"></span>&nbsp;Ok
-                </button>
-                <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span
-                        class="close-16x16"></span>&nbsp;Cancel
+                <button class='btn btn-default' ng-click='wiModal.onOkButtonClicked()'><span class="ok-16x16"></span>&nbsp;Ok
                 </button>
             </div>
         </div>
