--- a/source/dialogs/crossplot-format/crossplot-format-modal.html
+++ b/source/dialogs/crossplot-format/crossplot-format-modal.html
@@ -53,7 +53,8 @@
                                     <div class="col-sm-1">
                                         <label class="font-weight-normal">
                                             <input type="checkbox" value=""
-                                                    ng-model="wiModal.crossplotModelProps.pointsets[0].logX">Log
+                                                    ng-model="wiModal.crossplotModelProps.pointsets[0].logX"
+                                                    ng-change="wiModal.checkLogStatus()">Log
                                         </label>
                                     </div>
                                     <div class="col-sm-2">
@@ -98,7 +99,8 @@
                                     <div class="col-sm-1">
                                         <label class="font-weight-normal">
                                             <input type="checkbox" value=""
-                                                    ng-model="wiModal.crossplotModelProps.pointsets[0].logY">Log
+                                                    ng-model="wiModal.crossplotModelProps.pointsets[0].logY"
+                                                    ng-change="wiModal.checkLogStatus()">Log
                                         </label>
                                     </div>
                                     <div class="col-sm-2">
