--- a/source/dialogs/open-model/open-model-modal.html
+++ b/source/dialogs/open-model/open-model-modal.html
@@ -14,7 +14,7 @@
             </div>
             <div class="modal-body">
                 <h5 class="modal-infomation-title">
-                    <span class="workflow-16x16"></span>&nbsp;Workflow Information
+                    <span class="workflow-16x16"></span>&nbsp;Model Information
                 </h5>
                 <form class="form-horizontal">
                     <div class="form-group">
