--- a/source/dialogs/new-model/new-model-modal.html
+++ b/source/dialogs/new-model/new-model-modal.html
@@ -11,7 +11,7 @@
             <div class="modal-body">
                 <div class="">
                     <h5 class="modal-infomation-title">
-                        <span class="workflow-16x16"></span>&nbsp;Workflow Infomation
+                        <span class="workflow-16x16"></span>&nbsp;Model Infomation
                     </h5>
                     <form class="form-horizontal" action="" name="modalNewProject">
                         <div class="form-group">
@@ -21,7 +21,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label col-sm-3">Workflow Spec</label>
+                            <label class="control-label col-sm-3">Model Spec</label>
                             <wi-item-dropdown class='col-sm-9 height34px position-fixed adjust-width'
                                 on-wi-dropdown-init="wiModal.getWorkflowSpecs"
                                 on-item-changed="wiModal.workflowSpecChanged"
