--- a/source/dialogs/tvd-conversion/tvd-conversion-modal.html
+++ b/source/dialogs/tvd-conversion/tvd-conversion-modal.html
@@ -7,7 +7,7 @@
                     <span class="true-vertical-depth-16x16"></span>&nbsp;TVD Conversion</h4>
             </div>
             <div class="modal-body dialog-style">
-                <div class="row">
+                <div class="row container-fluid">
                     <form class="form-horizontal form-condensed">
                         <h5>
                             <span class="well-16x16"></span>Well
