--- a/source/html/index.html
+++ b/source/html/index.html
@@ -116,6 +116,9 @@
     <script>
         if (window.module) module = window.module;
     </script>
+
+    <!-- socket.io.js -->
+    <script src="vendor/js/socket.io.js"></script>
 </head>
 
 <body ng-app='wiapp'>
@@ -144,6 +147,10 @@
             <i class="fa fa-caret-right" aria-hidden="true" id="nextBtn" title="Next"></i>
         </div>
     </template>
+    
+    <!-- <div style="position: absolute; top: 25px; right: 350px; height: 30px">
+        <wi-communication></wi-communication>
+    </div> -->
     <div id="testElement"></div>
 </body>
 
