--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -155,9 +155,9 @@
                                                 Zoom Factor
                                             </label>
                                             <div class="col-sm-8">
-                                                <input type="number" step="any" min="0"
-                                                       class="form-control wi-form-control" name="width"
-                                                        ng-model="wiModal.props.general.zoomFactor">
+                                                <input type="number" step="any" min="0.001" max="100"
+                                                        class="form-control wi-form-control" name="width"
+                                                        ng-model="wiModal.props.general.zoomFactor" wi-input-range-limit>
                                             </div>
                                         </div>
                                     </div>
