--- a/source/dialogs/zone-track-properties/zone-track-properties-modal.html
+++ b/source/dialogs/zone-track-properties/zone-track-properties-modal.html
@@ -66,6 +66,15 @@
                         <div id="parameters">
                             <h5 class="normal-text">Parameters</h5>
                             <div class="form-group">
+                                <label class="control-label col-sm-5 padding-left-3em" for="well">Well</label>
+                                <div class="col-sm-7">
+                                    <select id="well" class="form-control wi-form-control" 
+                                            ng-options="well.idWell as well.name for well in wiModal.wells" 
+                                            ng-model="wiModal.idWell" ng-change="wiModal.onWellSelected()" required>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group" ng-if="wiModal.idWell">
                                 <label class="control-label col-sm-5 padding-left-3em" for="parameters-set">Parameter Set</label>
                                 <div class="col-sm-7">
                                     <select id="parameters-set" class="form-control wi-form-control">
@@ -73,7 +82,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group" ng-if="wiModal.idWell">
                                 <label class="control-label col-sm-5 padding-left-3em" for="zone-set">
                                   Zone Set</label>
                                 <div class="col-sm-6">
