--- a/source/html/simpleLayout.html
+++ b/source/html/simpleLayout.html
@@ -153,7 +153,7 @@
             <div class="row container-fluid">
                 <div class="col-md-1"></div>
             </div>
-            <wi-xplot style='flex:1; display: flex;' id-pointsets='wiPlotCtrl.idPointsets'></wi-xplot>
+            <wi-xplot style='flex:1; display: flex;' id-curves='wiPlotCtrl.idCurves'></wi-xplot>
         </div>
     </template>
 
