--- a/source/html/index.html
+++ b/source/html/index.html
@@ -110,6 +110,7 @@
     <script src="vendor/js/toastr.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/angular-wizard@latest/dist/angular-wizard.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handsontable/0.38.1/handsontable.full.min.js"></script>
+    <!-- <script src="js/chat-module.bundle.js"></script> -->
     <script src="js/main.js.bundle.js"></script>
 
     <!-- Insert this line after script imports -->
@@ -148,9 +149,7 @@
         </div>
     </template>
     
-    <!-- <div style="position: absolute; top: 25px; right: 350px; height: 30px">
-        <wi-communication></wi-communication>
-    </div> -->
+    <!-- <chat-module></chat-module> -->
     <div id="testElement"></div>
 </body>
 
