--- a/source/html/simpleLayout.html
+++ b/source/html/simpleLayout.html
@@ -120,6 +120,7 @@
                         <wi-button name="ExportTool" icon="export-well-top-32x32" label="Export Tool" container="ribbon" disable="handlers.isDisabled()" class="height65" handler="handlers.ExportToolButtonClicked"></wi-button>
                         <wi-button name="NeuralNetWorkPlayground" icon="browse-project-32x32" label="NN Playground" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.NeuralNetworkPlaygroundButtonClicked"></wi-button>
                         <wi-button name="wiPlotPlayground" icon="browse-project-32x32" label="Wi Plot" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.wiPlotButtonClicked"></wi-button>
+                        <wi-button name="wiLogplotPlayground" icon="logplot-blank-32x32" label="Wi Logplot" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.wiLogplotButtonClicked"></wi-button>
                         <wi-button name="ExitButton" icon="exit-32x32" label="Exit" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.ExitButtonClicked"></wi-button>
                     </wi-toolbar>
                 </wi-tab>
@@ -130,6 +131,13 @@
         <wi-context-menu name="ContextMenu"></wi-context-menu>
         <wi-spinner name="SPINNER"></wi-spinner>
     </div>
+
+    <template id="wi-logplot-playground">
+        <div style='height:100%;display:flex;flex-direction:column;background-color:#f4f4f4;'>
+            <h3 class="content-heading">Wi Logplot Sample</h3>
+            <wi-logplot style='flex:1; display: flex;' name="logplot1" id="1"></wi-logplot>
+        </div>
+    </template>
 
     <template id="wi-plot-playground">
         <div style='height:100%;display:flex;flex-direction:column;background-color:#f4f4f4;' ng-controller="wiPlotPlaygroundController as wiPlotCtrl">
