add floating action button to wiTask

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -8,6 +8,7 @@
     <link href="vendor/css/jquery-ui.css" rel="stylesheet">
     <link href="vendor/css/font-awesome.min.css" rel="stylesheet">
     <link href="vendor/css/themify-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="vendor/css/mfb.min.css">
 
     <link rel="stylesheet" type="text/css" href="vendor/css/toastr.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/angular-wizard@latest/dist/angular-wizard.min.css">
@@ -107,6 +108,7 @@
 
     <!--select line style && line width-->
     <script src="vendor/js/angular-sanitize.min.js"></script>
+    <script src="vendor/js/mfb-directive.js"></script>
 
     <script src="vendor/js/toastr.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/angular-wizard@latest/dist/angular-wizard.min.js"></script>
