--- a/source/html/index.html
+++ b/source/html/index.html
@@ -150,7 +150,7 @@
         </div>
     </template>
     
-    <!-- <chat-module></chat-module> -->
+    <!-- <chat-module id-project="1"></chat-module> -->
     <div id="testElement"></div>
 </body>
 
