--- a/source/html/index.html
+++ b/source/html/index.html
@@ -109,6 +109,7 @@
     <!--select line style && line width-->
     <script src="vendor/js/angular-sanitize.min.js"></script>
     <script src="vendor/js/mfb-directive.js"></script>
+    <script src="vendor/js/jquery.ui.touch-punch.min.js"></script>
 
     <script src="vendor/js/toastr.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/angular-wizard@latest/dist/angular-wizard.min.js"></script>
