--- a/source/html/index.html
+++ b/source/html/index.html
@@ -151,8 +151,8 @@
             <i class="fa fa-caret-right" aria-hidden="true" id="nextBtn" title="Next"></i>
         </div>
     </template>
-    
-    <!-- <chat-module id-project="1"></chat-module> -->
+    <!-- <div ng-controller="myCtrl"></div> -->
+    <!-- <chat-module></chat-module> -->
     <div id="testElement"></div>
 </body>
 
