--- a/source/html/simpleLayout.html
+++ b/source/html/simpleLayout.html
@@ -166,21 +166,25 @@
                 <label class="font-weight-normal">MinorY</label>
                     <input type="number" min="0" max="10" ng-model="wiPlotCtrl.config.minorY">
                 <label class="font-weight-normal">LogX</label>
-                    <input type="checkbox" value="" ng-model="wiPlotCtrl.config.logX">
+                    <input type="checkbox" value="" ng-model="wiPlotCtrl.config.logX" ng-change="wiPlotCtrl.checkLogStatus()">
                 <label class="font-weight-normal">LogY</label>
-                    <input type="checkbox" value="" ng-model="wiPlotCtrl.config.logY">
+                    <input type="checkbox" value="" ng-model="wiPlotCtrl.config.logY" ng-change="wiPlotCtrl.checkLogStatus()">
                 <label class="font-weight-normal">Left</label>
                     <input type="number" id="scaleLeft"
-                            ng-model="wiPlotCtrl.config.scale.left">
+                            ng-model="wiPlotCtrl.config.scale.left"
+                            ng-change="wiPlotCtrl.checkLogValueX(wiPlotCtrl.config.scale.left, 'scaleLeft')">
                 <label class="font-weight-normal">Right</label>
                     <input type="number" id="scaleRight"
-                            ng-model="wiPlotCtrl.config.scale.right">
+                            ng-model="wiPlotCtrl.config.scale.right"
+                            ng-change="wiPlotCtrl.checkLogValueX(wiPlotCtrl.config.scale.right, 'scaleRight')">
                 <label class="font-weight-normal">Bottom</label>
                     <input type="number" id="scaleBottom"
-                            ng-model="wiPlotCtrl.config.scale.bottom">
+                            ng-model="wiPlotCtrl.config.scale.bottom"
+                            ng-change="wiPlotCtrl.checkLogValueY(wiPlotCtrl.config.scale.bottom, 'scaleBottom')">
                 <label class="font-weight-normal">Top</label>
                     <input type="number" id="scaleTop"
-                            ng-model="wiPlotCtrl.config.scale.top">
+                            ng-model="wiPlotCtrl.config.scale.top"
+                            ng-change="wiPlotCtrl.checkLogValueY(wiPlotCtrl.config.scale.top, 'scaleTop')">
                 <button class="btn btn-default col-md-2" ng-click="wiPlotCtrl.testUpdate()">Test update</button>
             </div>
             <wi-xplot style='flex:1; display: flex;' id-curves='wiPlotCtrl.idCurves' config='wiPlotCtrl.config'></wi-xplot>
