--- a/source/html/index.html
+++ b/source/html/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="vendor/css/mfb.min.css">
 
     <link rel="stylesheet" type="text/css" href="vendor/css/toastr.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/angular-wizard@latest/dist/angular-wizard.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/handsontable/0.38.1/handsontable.full.min.css">
+    <link rel="stylesheet" type="text/css" href="vendor/css/angular-wizard.min.css">
+    <link rel="stylesheet" href="vendor/css/handsontable.full.min.css">
 
     <!-- color picker -->
     <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap-colorpicker.min.css">
@@ -112,8 +112,8 @@
     <script src="vendor/js/jquery.ui.touch-punch.min.js"></script>
 
     <script src="vendor/js/toastr.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/angular-wizard@latest/dist/angular-wizard.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handsontable/0.38.1/handsontable.full.min.js"></script>
+    <script type="text/javascript" src="vendor/js/angular-wizard.min.js"></script>
+    <script src="vendor/js/handsontable.full.min.js"></script>
     <!-- <script src="js/chat-module.bundle.js"></script> -->
     <script src="js/main.js.bundle.js"></script>
 
