--- a/source/html/index.html
+++ b/source/html/index.html
@@ -72,6 +72,7 @@
     <link rel="stylesheet" href="css/wi-item-dropdown.css">
     <link href='css/graph.css' rel='stylesheet'>
     <link href='css/main.css' rel='stylesheet'>
+    <link href='css/wi-zone-template-manager.css' rel='stylesheet'>
     <!-- Insert this line above script imports  -->
     <script>
         if (typeof module === 'object') {
