--- a/source/html/index.html
+++ b/source/html/index.html
@@ -74,6 +74,8 @@
     <link href='css/graph.css' rel='stylesheet'>
     <link href='css/main.css' rel='stylesheet'>
     <link href='css/wi-zone-template-manager.css' rel='stylesheet'>
+    <link href='css/wi-zone-set-manager.css' rel='stylesheet'>
+    
     <!-- Insert this line above script imports  -->
     <script>
         if (typeof module === 'object') {
